fixed menu alignment

--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -157,7 +157,7 @@
         display: block;
         position: absolute;
         right: 0;
-        margin: .7rem .3rem 0 0;
+        margin: .7rem 1rem 0 0;
         cursor: pointer;
         text-align: center;
         z-index: 1;
